# sample-agentcore-eval-demo

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: agentcore-eval.yml
agent/: Dockerfile  README.md  pyproject.toml
agent/src/: assistant_agent.py
fixtures/: sample_traces.json
infrastructure/: roles.py  stack.py
infrastructure/pre_token_lambda/: index.py
mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
mcp-server/src/: exceptions.py
mcp-server/src/auth/: __init__.py  middleware.py  models.py  starlette_middleware.py  utils.py
notebooks/: 01_deploy_and_test_rbac.ipynb  02_evaluation_pipeline.ipynb  agentcore_eval_walkthrough.ipynb
scripts/: README.md  agentcore_eval.py  eval_dataset.json  evaluate_stored_traces.py  test_agent.py
