[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server providing additional tools for the assistant agent"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "pydantic>=2.0.0",
    "python-json-logger>=2.0.0",
    "PyJWT==2.11.0",
    "packaging",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
